<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#333333">

	<LinearLayout android:layout_alignParentTop="true"
		android:layout_width="fill_parent" android:layout_height="60dip"
		android:background="@drawable/toppanel" android:padding="0dip"
		android:id="@+id/ll_toppanel" android:gravity="center">
		<LinearLayout android:layout_width="0dip"
			android:layout_height="40dip" android:layout_weight="2"
			android:layout_marginBottom="5dip" android:layout_marginLeft="40dip"
			android:gravity="center_vertical" android:layout_marginRight="5dip"
			android:orientation="vertical">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:textSize="18dip"
				android:textColor="#fff" android:text="@string/setting" android:id="@+id/lbluploader"
				android:gravity="left|center_vertical" />
		</LinearLayout>
	</LinearLayout>
	<ScrollView android:layout_width="fill_parent" android:layout_weight="2"
		android:layout_height="0dip" android:fadingEdge="none">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:background="#333333">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="0dip" android:layout_weight="2"
				android:orientation="vertical" android:scrollbars="horizontal">
				<TextView android:text="@string/general"
					android:layout_width="fill_parent" android:textStyle="bold"
					android:layout_height="wrap_content" android:background="#333333"
					android:gravity="bottom" android:paddingLeft="10dip" />

				<LinearLayout android:layout_width="fill_parent"
					android:paddingLeft="20dip" android:layout_height="50dip"
					android:id="@+id/llcache" android:layout_marginTop="1dip"
					android:background="#212021">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:layout_weight="2"
						android:orientation="vertical" android:gravity="center_vertical">
						<TextView android:text="@string/cache"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
						<TextView android:text="10M" android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/txtcache" />
					</LinearLayout>

					<Button android:layout_width="100dip" android:layout_height="fill_parent"
						android:id="@+id/btnclear" android:text="@string/clear"
						android:textColor="#f0f0f0" android:background="@drawable/btn"
						android:layout_margin="5dip" />

				</LinearLayout>

				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="50dip" android:id="@+id/llcache"
					android:layout_marginTop="1dip" android:background="#212021"
					android:orientation="horizontal" android:paddingLeft="20dip">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:orientation="vertical"
						android:layout_weight="2" android:gravity="center_vertical">
						<TextView android:text="@string/maxcache"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
						<TextView android:text="50M" android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/txtmax" />
					</LinearLayout>
					<Button android:layout_width="100dip" android:layout_height="fill_parent"
						android:id="@+id/btnchangemax" android:text="@string/change"
						android:textColor="#f0f0f0" android:background="@drawable/btn"
						android:layout_margin="5dip" />
				</LinearLayout>

				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="50dip" android:layout_marginTop="1dip"
					android:background="#212021" android:paddingLeft="20dip">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:layout_weight="2"
						android:orientation="vertical" android:gravity="center_vertical">
						<TextView android:text="@string/directory"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
						<TextView android:text="SDCard" android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/txtdir" />
					</LinearLayout>

					<Button android:layout_width="100dip" android:layout_height="fill_parent"
						android:id="@+id/btnchange" android:text="@string/change"
						android:textColor="#f0f0f0" android:background="@drawable/btn"
						android:layout_margin="5dip" />

				</LinearLayout>

				<TextView android:text="@string/info_title"
					android:layout_width="fill_parent" android:textStyle="bold"
					android:layout_height="wrap_content" android:background="#333333"
					android:gravity="bottom" android:paddingLeft="10dip" />

				<LinearLayout android:id="@+id/txt_uploadimg"
					android:paddingLeft="20dip" android:layout_width="fill_parent"
					android:layout_height="50dip" android:layout_marginTop="1dip"
					android:background="#212021">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:layout_weight="2"
						android:orientation="vertical" android:gravity="center_vertical">
						<TextView android:text="@string/mn_upload"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
					</LinearLayout>
				</LinearLayout>

				<LinearLayout android:id="@+id/txt_logout"
					android:paddingLeft="20dip" android:layout_width="fill_parent"
					android:layout_height="50dip" android:layout_marginTop="1dip"
					android:background="#212021">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:layout_weight="2"
						android:orientation="vertical" android:gravity="center_vertical">
						<TextView android:text="@string/mn_logout"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
					</LinearLayout>
				</LinearLayout>

				<TextView android:text="@string/reply"
					android:layout_width="fill_parent" android:textStyle="bold"
					android:layout_height="wrap_content" android:background="#333333"
					android:gravity="bottom" android:paddingLeft="10dip" />

				<LinearLayout android:id="@+id/txtintro"
					android:paddingLeft="20dip" android:layout_width="fill_parent"
					android:layout_height="50dip" android:layout_marginTop="1dip"
					android:background="#212021">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:layout_weight="2"
						android:orientation="vertical" android:gravity="center_vertical">
						<TextView android:text="@string/intro"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
					</LinearLayout>
				</LinearLayout>

				<LinearLayout android:id="@+id/txtfeedback"
					android:paddingLeft="20dip" android:layout_width="fill_parent"
					android:layout_height="50dip" android:layout_marginTop="1dip"
					android:background="#212021">
					<LinearLayout android:layout_width="0dip"
						android:layout_height="fill_parent" android:layout_weight="2"
						android:orientation="vertical" android:gravity="center_vertical">
						<TextView android:text="@string/feedback"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:textSize="16dip" android:textColor="#fff" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

		</LinearLayout>
	</ScrollView>
	
	
	<com.krazevina.objects.KHorizontalScrollView android:padding="0dip"
		android:id="@+id/layout_menu" android:layout_width="fill_parent"
		android:layout_height="57dip" android:fadingEdge="none" android:scrollbars="none"
		android:layout_alignBottom="@+id/ksv" android:background="@drawable/bottompanel">
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="57dip">
			<LinearLayout android:layout_width="320dip"	android:layout_height="fill_parent" 
				android:orientation="vertical" android:padding="0dip" android:id="@+id/m1">
				<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="12dip"
					android:layout_height="fill_parent">
				    <Button android:layout_width="73dip" android:layout_height="fill_parent"
						android:focusable="false" android:layout_marginLeft="8dip"
						android:background="#00000000" android:drawableTop="@drawable/g_follow_hi"
						android:text="@string/imgsfollow" android:textSize="6pt"
						android:gravity="center" android:textColor="#f00"/>
					<LinearLayout android:layout_width="1px" android:layout_height="fill_parent"
					    android:background="#f00" android:layout_marginBottom="7dip"
					    android:layout_marginTop="3dip"/>
					
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:drawableTop="@drawable/moibtn"
						android:background="#00000000" android:text="@string/sortnew"
						android:textColor="#fff" android:gravity="center"
						android:textSize="5pt"
						android:focusable="false" android:layout_weight="1"/>
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:drawableTop="@drawable/btnrandom"
						android:text="@string/sortrandom" android:gravity="center"
						android:textColor="#fff" android:textSize="5pt"
						android:focusable="false" android:layout_weight="1"/>
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:textSize="5pt"
						android:text="@string/sortuser" android:drawableTop="@drawable/btndanhsach"
						android:textColor="#fff" android:gravity="center"
						android:focusable="false" android:layout_weight="1"/>
				</LinearLayout>
			</LinearLayout>
			
			
			<LinearLayout android:layout_width="320dip" android:id="@+id/m2"
				android:layout_height="93dip" android:orientation="vertical"
				 android:padding="0dip">
				<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="12dip"
					android:layout_height="fill_parent">
					<Button android:layout_width="73dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/option"
						android:drawableTop="@drawable/iconsettingshl"
						android:layout_marginLeft="8dip"
						android:textColor="#f00" android:gravity="center"
						android:id="@+id/txt" android:focusable="false"
						android:textSize="5pt"/>
					
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/account"
						android:textColor="#fff" android:gravity="center"
						android:id="@+id/btnacc" android:drawableTop="@drawable/btnme"
						android:layout_weight="1" android:focusable="false"
						android:textSize="5pt"/>
						
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/setting"
						android:textColor="#f00" android:gravity="center"
						android:drawableTop="@drawable/iconsettingshl"
						android:id="@+id/btnsetting"
						android:layout_weight="1" android:focusable="false"
						android:textSize="5pt"/>
						
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/list"
						android:textColor="#fff" android:id="@+id/btnlist"
						android:gravity="center" android:drawableTop="@drawable/btnfollow"
						android:layout_weight="1" android:focusable="false"
						android:textSize="5pt"/>
						
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/btn_all"
						android:textColor="#fff" android:gravity="center"
						android:drawableTop="@drawable/btnall"
						android:visibility="gone" android:id="@+id/btnall"
						android:layout_weight="1" android:focusable="false"
						android:textSize="5pt"/>
						
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/myimgs"
						android:textColor="#fff" android:gravity="center"
						android:drawableTop="@drawable/btnme"
						android:visibility="gone" android:id="@+id/btnmyimg"
						android:layout_weight="1" android:focusable="false"
						android:textSize="5pt"/>
						
					<Button android:layout_width="0dip" android:layout_height="fill_parent"
						android:background="#00000000" android:text="@string/imgfollow"
						android:textColor="#fff" android:visibility="gone"
						android:drawableTop="@drawable/btnfollow"
						android:gravity="center" android:id="@+id/btnimgfollow"
						android:layout_weight="1" android:focusable="false"
						android:textSize="5pt"/>
					
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</com.krazevina.objects.KHorizontalScrollView>
	
</LinearLayout>