<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_vertical|center_horizontal">
	
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@drawable/btn" android:orientation="vertical" 
		android:gravity="center_vertical|center_horizontal"
		android:padding="10dip">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/txt_search"
			android:padding="5dip" android:textColor="#fff" android:textSize="16dip"/>
		<EditText android:id="@+id/edt_search" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:singleLine="true"
			android:hint="tên người dùng"/> 
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:gravity="center_horizontal" android:layout_marginTop="10dip">
			<Button android:id="@+id/btn_search" android:layout_width="120dip"
				android:layout_height="50dip" android:text="@string/btn_search"
				android:textColor="#fff" android:gravity="center_vertical|center_horizontal"
				android:background="@drawable/btnnc" />
			<Button android:id="@+id/btn_cancel" android:layout_width="120dip"
				android:layout_height="50dip" android:text="@string/cancel"
				android:textColor="#fff" android:gravity="center_vertical|center_horizontal"
				android:background="@drawable/btnnc" android:layout_marginLeft="5dip" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
